# ChangeLog for x11-libs/pango
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.280 2009/12/21 23:28:30 eva Exp $

*pango-1.26.2 (21 Dec 2009)

  21 Dec 2009; Gilles Dartiguelongue <eva@gentoo.org> +pango-1.26.2.ebuild:
  Version bump. Bug fixes.

  28 Nov 2009; Rémi Cardona <remi@gentoo.org> pango-1.24.5-r1.ebuild,
  pango-1.26.0.ebuild:
  wrong commit, revert

*pango-1.26.1 (21 Nov 2009)

  21 Nov 2009; Romain Perier <mrpouet@gentoo.org> +pango-1.26.1.ebuild:
  Version bump.

  01 Nov 2009; Gilles Dartiguelongue <eva@gentoo.org> pango-1.26.0.ebuild:
  Add missing gtk-doc-am to DEPEND, bug #291119.

  31 Oct 2009; Nirbheek Chauhan <nirbheek@gentoo.org> pango-1.26.0.ebuild,
  +files/pango-1.26.0-fix-parallel-build.patch:
  Fix parallel build with patch by Martin von Gagern from bug 287825

*pango-1.26.0 (29 Oct 2009)

  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org> -pango-1.24.2.ebuild,
  +pango-1.26.0.ebuild, +files/pango-1.26.0-introspection-automagic.patch,
  +files/pango-1.26.0-lib64.patch:
  New version for GNOME 2.28. Clean up old revisions.

  26 Oct 2009; Raúl Porcel <armin76@gentoo.org> pango-1.24.5-r1.ebuild:
  ia64/s390/sh/sparc stable wrt #285586

  08 Oct 2009; Markus Meier <maekke@gentoo.org> pango-1.24.5-r1.ebuild:
  arm stable, bug #285586

  03 Oct 2009; Tobias Klausmann <klausman@gentoo.org>
  pango-1.24.5-r1.ebuild:
  Stable on alpha, bug #285586

  02 Oct 2009; Mart Raudsepp <leio@gentoo.org> -pango-1.24.3.ebuild,
  -pango-1.24.4.ebuild, -pango-1.24.5.ebuild:
  Remove redundant versions

  30 Sep 2009; Jeroen Roovers <jer@gentoo.org> pango-1.24.5-r1.ebuild:
  Stable for HPPA (bug #285586).

  27 Sep 2009; nixnut <nixnut@gentoo.org> pango-1.24.5-r1.ebuild:
  ppc stable #285586

  25 Sep 2009; Brent Baude <ranger@gentoo.org> pango-1.24.5-r1.ebuild:
  Marking pango-1.24.5-r1 ppc64 stable for bug 285586
