@@ -11,6 +11,6 @@ DIST pango-1.26.2.tar.bz2 1536011 RMD160 6613bddf643d5c912e6656d84c6671aa6ce88a9
 EBUILD pango-1.24.5-r1.ebuild 2158 RMD160 e1b455a4cecb666433cb84cc1d5fc7fec341192e SHA1 d84da55e93dfcb85adf185f1b4d005109c1a28cf SHA256 f7ee4670aa70a6393de1fdd787a9adf096a83ca8071944396a92c2c06933a5c9
 EBUILD pango-1.26.0-r00.1.ebuild 2703 RMD160 39f9a96c6c1450c2f7f7362241e8750a01e91ab6 SHA1 e21516180b8e6bad90d9c2631be4e9662f1a73f3 SHA256 d547952b470152c0185c895617e4fcbeb6d730586c88e5dca3889e6da4d8eda7
 EBUILD pango-1.26.1.ebuild 2619 RMD160 461da697ec56c04b6f4027a397a446d8e064b531 SHA1 826dd61b3dc17cc0f53452b5bf170b0d17117ccf SHA256 1653567321df240ec01b90e1d4a46ec929d58150678668869496e413e0b74350
-EBUILD pango-1.26.2.ebuild 2636 RMD160 6c149f49cc341d0e797bca748bbafef979e024f9 SHA1 baac5683f811f974766f31e68bfa4f60c88f5e34 SHA256 1acd54fefda8f2039e066ae5002ac2eef252b54b6b4bd292740e919a13bc07da
-MISC ChangeLog 34926 RMD160 e2cfed40a9878991237028e61b2db64812d2459a SHA1 9ad84f74e384b38ad44b73b25b2fb815b5dcdb90 SHA256 a870c1732c046cf6ac318c07ca6ab0fc4b15bdf261fe75db6b4ae398aed75c53
+EBUILD pango-1.26.2.ebuild 2669 RMD160 a89f452c924b8f52d45d5258c8d41f5757d6b94f SHA1 163c46c2d012094dd583e0c7aae86ee91d553b2f SHA256 79ca01503d7ee14b273f379e2a04bd1eed575de076455a466ae20cae8b0b51bc
+MISC ChangeLog 35103 RMD160 0594d98e6709234959b855ad53603e59f58b2881 SHA1 9134a1f27f87c4da3a3bff88df60cbb179ba0e31 SHA256 6b0c40e0db28b1228cf4192cc751eca6f7f60b17c3bc7bc64400699e87da2d7a
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
