@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/pango
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.280 2009/12/21 23:28:30 eva Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/pango/ChangeLog,v 1.281 2010/02/07 19:45:58 solar Exp $
+
+  07 Feb 2010; <solar@gentoo.org> pango-1.26.2.ebuild:
+  - This version of pango needs to export CXX to avoid c++ from the host
+  being called directly when cross compiling.
 
 *pango-1.26.2 (21 Dec 2009)
 
